--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,7 +11,7 @@ task:
     memory: 24G
 
   Install_Packages_Ubuntu_script:
-    - sudo apt-get install -y bsdmainutils openjdk-8-jdk git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip python python3 bc libc6
+    - sudo apt-get install -y bsdmainutils openjdk-8-jdk git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip python bc libc6
     - mkdir -p /tmp/ci/android_build/bin && curl https://storage.googleapis.com/git-repo-downloads/repo > /tmp/ci/android_build/bin/repo && chmod a+x /tmp/ci/android_build/bin/repo
     - touch ~/.profile
     - echo "PATH="/tmp/ci/android_build/bin:${PATH}"" >> ~/.profile
