--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,7 +7,7 @@ env:
 task:
   name: master
   timeout_in: 2h
-  only_if: $CIRRUS_REPO_OWNER == 'Build'
+  only_if: $CIRRUS_REPO_OWNER == 'UbPorts-On7xelte'
   container:
     image: dopaemon/bionic:latest
     cpu: 8
