--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,19 +13,12 @@ task:
     cpu: 8
     memory: 32G
 
-  Install_Packages_Ubuntu_script:
+  install_packages_ubuntu_script:
     - sudo apt-get update
     - sudo apt-get install -y ccache rclone git-lfs bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libssl-dev libwxgtk3.0-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
-  Rclone_Configure_script:
+  rclone_configure_script:
     - mkdir -p ~/.config/rclone
     - echo "$rclone_conf" > ~/.config/rclone/rclone.conf
-  download_ccache_background_script:
-    - ./download_ccache
-  sync_script:
-    - ./sync
-  monitor_background_script:
-    - ./monitor
-  build_script:
-    - ./build
-  upload_ccache_script:
-    - ./upload_ccache
+  halium_script:
+    - git clone https://github.com/UbPorts-On7xelte/Build.git /tmp/CirrusCI
+    - ./tmp/CirrusCI/build.sh
